Fix menu alignment

--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -12,7 +12,7 @@
     padding-top: 17px;
     margin-right: 30px;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
 
     .save-button-wrapper {
       position: relative;
